2011-04-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Maciej Stachowiak.

        <rdar://problem/9227839> REGRESSION: Reproducible crash in Snow Leopard when trying to show the Dictionary panel or application
        https://bugs.webkit.org/show_bug.cgi?id=57739

        * Shared/DictionaryPopupInfo.cpp:
        (WebKit::DictionaryPopupInfo::encode): Do not encode the options dictionary on Snow Leopard.
        (WebKit::DictionaryPopupInfo::decode): Do not decode the options dictionary on Snow Leopard.
        * Shared/DictionaryPopupInfo.h: Removed the options member variable on Snow Leopard.
        * Shared/Plugins/PluginQuirks.h:
        * WebProcess/WebPage/mac/WebPageMac.mm:
        (WebKit::WebPage::performDictionaryLookupForRange): Do not set the options member variable on
        Snow Leopard.

2011-04-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        https://bugs.webkit.org/show_bug.cgi?id=57605
        Frame::pageScaleFactor() should not affect getBoundingClientRect() or 
        getClientRects()
        -and corresponding-
        <rdar://problem/9194541>

        Add DRT support for the scaleWebView SPI.
        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageSetScaleAtOrigin):
        * WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h:

2011-04-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        "Search in Spotlight" broken in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=57712

        Proxy spotlight searching to the UIProcess.

        * UIProcess/WebPageProxy.messages.in:
        Add new message. Re-organize messages to put all mac specific ones together.

        * UIProcess/WebPageProxy.h:
        * UIProcess/mac/WebPageProxyMac.mm:
        (WebKit::WebPageProxy::speak):
        (WebKit::WebPageProxy::searchWithSpotlight):
        Moved code to trigger spotlight here. Use WTF::String -> NSString conversion function